force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/LLC_BI__Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sub_Type__c</fullName>
    <description>The user populates this optional picklist field to determine the sub type of service details being added. By default, this field appears after a service type is selected.</description>
    <inlineHelpText>Select a service sub type.</inlineHelpText>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Builder Risk</fullName>
            </value>
            <value>
                <fullName>Business Interruption</fullName>
            </value>
            <value>
                <fullName>Business Personal Property</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Collision &amp; Comprehensive</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Earthquake</fullName>
            </value>
            <value>
                <fullName>Flood Building</fullName>
            </value>
            <value>
                <fullName>Flood Contents</fullName>
            </value>
            <value>
                <fullName>Hazard</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Multi Peril - Excluding Flood</fullName>
            </value>
            <value>
                <fullName>Multi Peril - Including Flood</fullName>
            </value>
            <value>
                <fullName>Real and Personal Property</fullName>
            </value>
            <value>
                <fullName>Re-Insurance</fullName>
            </value>
            <value>
                <fullName>Sinkhole</fullName>
            </value>
            <value>
                <fullName>Terrorism</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>Windstorm and Hail</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>