force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>The user populates this optional picklist field to determine the type of service being detailed. By default, this field is set to Insurance.</description>
    <inlineHelpText>Select a service type.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>